@@ -16,18 +16,28 @@ This is setup in [Main.scala](https://github.com/pjfanning/micrometer-akka-sampl
 This sample uses [sbt-javaagent](https://github.com/sbt/sbt-javaagent) to enable aspectjweaver.
 This plugin basically adds this to the java runtime command.
 
-```-javaagent:/path/to/aspectjweaver-1.9.9.jar```
+```-javaagent:/path/to/aspectjweaver-1.9.19.jar```
 
 If you want to use micrometer-akka with your own application, ensure that you startup script adds something like this:
 
 ```bash
-JAVA_AGENT="-javaagent:$BASE/lib/aspectjweaver-1.9.9.jar"
+JAVA_AGENT="-javaagent:$BASE/lib/aspectjweaver-1.9.19.jar"
 $JAVA_HOME/bin/java $JAVA_AGENT -cp $CP $JVM_OPTS $CLASS_NAME
 ```
 
 To query the metrics endpoint, use:
 
 ```curl http://localhost:12345/metrics```
+
+## Running with Java 16 and above
+
+Note that the `build.sbt` has this:
+```
+//uncomment this add-opens -- needed for Java 16 and above runtimes -- will cause issues if used with Java 8 runtime
+run / javaOptions ++= Seq("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+```
+
+If you use micrometer-akka in your own application, you will need to add an equivalent `--add-opens` configuration.
 
 ## Grafana
 
